# Supabase-Projects

./: Readme.md
Connect to supabase/: README.md  main.py  pyproject.toml
Sharing Images FastAPI/: README.md  main.py  pyproject.toml
Sharing Images FastAPI/static/: style.css
Sharing Images FastAPI/templates/: index.html  upload.html
To Do App/: README.md  main.py  pyproject.toml
